--- a/src/po/da_DK/digitail.po
+++ b/src/po/da_DK/digitail.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://github.com/MasterTailer/CRUMPET/issues\n"
 "POT-Creation-Date: 2021-11-02 18:36+0000\n"
-"PO-Revision-Date: 2021-08-08 15:09+0100\n"
+"PO-Revision-Date: 2021-11-02 19:24+0000\n"
 "Last-Translator: Dan Leinir Turthra Jensen <admin@leinir.dk>\n"
 "Language-Team: English <kde-i18n-doc@kde.org>\n"
 "Language: en_GB\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 21.04.3\n"
+"X-Generator: Lokalize 21.08.2\n"
 
 #: BTDeviceEars.cpp:66 BTDeviceMitail.cpp:71 BTDeviceTail.cpp:58
 msgctxt ""
@@ -166,20 +166,22 @@ msgstr ""
 msgctxt ""
 "Title of the message box shown to the user upon a successful firmware upgrade"
 msgid "Upgrade Successful"
-msgstr ""
+msgstr "Opgradering Lykkedes"
 
 #: BTDeviceMitail.cpp:163
 msgctxt ""
 "Message shown to the user when a firmware update completed successfully"
 msgid "Congratulations, your gear has been successfully updated to version %1!"
 msgstr ""
+"Tillykke! Opgraderingen af dit udstyr til version %1 blev gennemført med"
+" success."
 
 #: BTDeviceMitail.cpp:166
 msgctxt ""
 "Title of the message box shown to the user upon an unsuccessful firmware "
 "upgrade"
 msgid "Update Failed"
-msgstr ""
+msgstr "Opgradering Fejlede"
 
 #: BTDeviceMitail.cpp:166
 msgctxt "Message shown to the user when a firmware update failed"
@@ -189,6 +191,14 @@ msgid ""
 "a safe fallback to just go back to your old firmware version upon a failure. "
 "You can try the update again by clicking the Install button gain.</p>"
 msgstr ""
+"<p>Beklageligvis lykkedes opgraderingen af dit udstyr ikke. Det er oftest"
+" fordi der "
+"skete datafejl under overførslen til dit udstyr, hvilket er grunden til at"
+" dit udstyr har "
+"et sikkert tilbagefald, som blot går tilbage til den version du allerede"
+" havde installeret "
+"hvis der opstår en fejl. Du kan genforsøge opdateringen ved at klikke på"
+" Installer igen.</p>"
 
 #: BTDeviceMitail.cpp:312
 msgctxt ""
@@ -198,6 +208,8 @@ msgid ""
 "You already have the newest version of the firmware installed on your gear, "
 "congratulations!"
 msgstr ""
+"Tillykke! Du har allerede den nyeste version af firmwaren isntalleret på dit"
+" udstyr."
 
 #: BTDeviceMitail.cpp:317
 msgctxt ""
@@ -209,11 +221,16 @@ msgid ""
 "connection issue. If you run into this problem repeatedly, please get in "
 "touch."
 msgstr ""
+"Filen som bruges til at indlæse information om nye firmware versioner"
+" indeholdte ikke "
+"det forventede dataformat. Dette er som regel en midlertidig fejl, eller en"
+" forbindelsesfejl. "
+"Hvis du løber ind i denne fejl ofte bør du tage direkte kontakt til os."
 
 #: BTDeviceMitail.cpp:321
 msgctxt "Message for when we are checking the downloaded firmware data"
 msgid "Checking integrity of the downloaded firmware data..."
-msgstr ""
+msgstr "Undersøger integriteten af det nedhentede firmware data..."
 
 #: BTDeviceMitail.cpp:384
 msgctxt "Warning message when a fault occurred during a connection attempt"
@@ -235,6 +252,13 @@ msgid ""
 "contact us on info@thetailcompany.com and tell us that you got this error.</"
 "p>"
 msgstr ""
+"<p><b>Opdatering Mislykkedes!</b></p><p>Vi har forsøgt at sende det nye"
+" firmware "
+"til dit udstyr hurtigere end din enhed var i stand til at understøtte. Hvis"
+" du ser denne "
+"fejlbesked:</p><p>Først, slap helt af, dit udstyr er sikkert.</p><p>Dernæst,"
+" tag kontakt "
+"til os på info@thetailcompany.com og fortæl os, at du fik denne fejl.</p>"
 
 #: BTDeviceMitail.cpp:414
 msgctxt ""
@@ -282,12 +306,11 @@ msgstr ""
 "Kunne ikke forbinde til din MiTail. Forsøg igen (måske skal den tættere på?)"
 
 #: BTDeviceMitail.cpp:508
-#, fuzzy
 msgctxt ""
 "Message shown to the user when a firmware upload has completed and the "
 "device has rebooted itself"
 msgid "Attempting to reconnect to your gear..."
-msgstr "Forsøger at forbinde..."
+msgstr "Forsøger at genforbinde..."
 
 #: BTDeviceMitail.cpp:513
 msgctxt ""
@@ -297,6 +320,8 @@ msgid ""
 "Firmware upload complete, waiting for your gear to reboot automatically "
 "before attempting to reconnect..."
 msgstr ""
+"Firmware upload færdiggjort, venter på at dit udstyr genstarter automatisk "
+"før vi forøger at genforbinde..."
 
 #: BTDeviceMitail.cpp:516
 msgctxt ""
@@ -313,14 +338,14 @@ msgstr ""
 msgctxt ""
 "Message shown alongside a progress bar when downloading update information"
 msgid "Downloading firmware update information"
-msgstr ""
+msgstr "Downloader informationer om firmware opdateringer"
 
 #: BTDeviceMitail.cpp:643
 msgctxt ""
 "Message shown along a progress bar when downloading the firmware payload "
 "itself"
 msgid "Downloading firmware update from The Tail Company's website..."
-msgstr ""
+msgstr "Nedhenter firmware opdatering fra The Tail Companys hjemmeside..."
 
 #: BTDeviceMitail.cpp:660
 msgctxt ""
@@ -330,6 +355,12 @@ msgid ""
 "should simply try again. If it continues to fail, please get in touch with "
 "us and we can try and work something out!"
 msgstr ""
+"Den nedhentede firmware opdatering indeholdte ikke hvad vi forventede. Dette "
+"er som regel fordi nedhentningen selv fejlede, og vil blive rettet ved at"
+" forsøge igen. "
+"Hvis dette bliver ved med at fejle, tag da kontakt til os direkte og vi kan"
+" forsøge at "
+"finde ud af, hvad det er galt!"
 
 #: BTDeviceMitail.cpp:676
 msgctxt "Message shown during firmware update processes"
@@ -339,6 +370,12 @@ msgid ""
 "Once completed, your gear will restart and disconnect from this device. Once "
 "rebooted, you will be able to connect to it again."
 msgstr ""
+"Sender firmwaren til dit udstyr. Hold dine enheder tæt på hinanden, "
+"og vær sikker på begge har masser af strøm (eller tilslut en strømforsyning"
+" nu). "
+"Når vi er færdige vil dit udstyr genstarte og koble sig selv fra denne enhed."
+" Når "
+"det har genstartet vil du være i stand til at tilkoble det igen."
 
 #: BTDeviceTail.cpp:91
 msgctxt ""
@@ -1667,12 +1704,11 @@ msgid "Rebalance Microphones"
 msgstr "Genbalancer Mikrofonerne"
 
 #: qml/SettingsPage.qml:163
-#, fuzzy
 msgctxt ""
 "Heading for the panel for checking for and performing firmware updates for "
 "gear which supports this"
 msgid "Gear Firmware"
-msgstr "Udstyrsnavne"
+msgstr "Udstyrsfirmware"
 
 #: qml/SettingsPage.qml:164
 msgctxt ""
@@ -1683,13 +1719,16 @@ msgid ""
 "clicking the \"Check\" button below, and if there is one, you can then click "
 "the button underneath to download and install the update."
 msgstr ""
+"Hvis dit udstyr understøtter firmware updateringer kan du se efter nye ved at "
+"klikke på knapped \"Led\" nedenfor, og hvis der er en, kan du klikke på "
+"knappen nedenfor for at nedhente og installere opdateringen."
 
 #: qml/SettingsPage.qml:180
 msgctxt ""
 "Label for the button which makes the app go online and check for the newest "
 "firmware available for the specific device"
 msgid "Check For New Firmware"
-msgstr ""
+msgstr "Led Efter Nyt Firmware"
 
 #: qml/SettingsPage.qml:189
 msgctxt ""
@@ -1699,13 +1738,15 @@ msgid ""
 "You currently have version %1 installed, and version %2 is available for you "
 "to install"
 msgstr ""
+"Dit udstyr har version %1 installeret, og version %2 er tilgængeligt for"
+" installation."
 
 #: qml/SettingsPage.qml:195
 msgctxt ""
 "Label for the button which makes the app download the newest available "
 "firmware (only visible when updated firmware has been found)"
 msgid "Download"
-msgstr ""
+msgstr "Download"
 
 #: qml/SettingsPage.qml:203
 msgctxt ""
@@ -1728,6 +1769,28 @@ msgid ""
 "app and reboot. This is quite normal! It should automatically reconnect, but "
 "in case it doesn't, just click the Connect button on the front page as usual."
 msgstr ""
+"Før du opdaterer dit udstyr fra version %1 til %2 bør du følge forslagene"
+" nedenfor:\n"
+"\n"
+"- Forbind dit udstyr til USB laderen og vær sikker på det oplader. Lad det"
+" være tilkoblet "
+"til strømforsyningen mens du opdaterer firmwaren.\n"
+"\n"
+"- Vær sikker på, at din telefon har nok strøm. Vi foreslår du mindst har 50%"
+" batteri inden "
+"du begynder opdateringsprocessen.\n"
+"\n"
+"Opdateringen af dit udstyr vil tage omkring 3 minutter. Du må under ingen"
+" omstændigheder "
+"slukke dit udstyr eller telefonen mens opdateringen er igang, ellers vil der"
+" opstå fejl!\n"
+"\n"
+"Når det nye firmware er blevet sendt til dit udstyr vil det automatisk"
+" frakoble sig selv fra "
+"appen og genstarte.Dette er helt normalt! Efter genstarten skulle det"
+" automatisk genforbinde, "
+"men i tilfælde dette ikke virker kan du bare klikke på Forbind knappen på"
+" forsiden som almindeligvis."
 
 #: qml/SettingsPage.qml:209
 msgctxt ""
@@ -1735,12 +1798,12 @@ msgctxt ""
 "firmware (only visible when updated firmware has been downloaded "
 "successfully)"
 msgid "Install"
-msgstr ""
+msgstr "Installer"
 
 #: qml/SettingsPage.qml:220
 msgctxt "Heading for the panel of the language selector, on the settings page"
 msgid "Language"
-msgstr ""
+msgstr "Sprog"
 
 #: qml/SettingsPage.qml:221
 msgctxt "Description of the language selection option on the settings page"
@@ -1749,6 +1812,10 @@ msgid ""
 "that language is not available. However, if you wish to force some language, "
 "you can select it here, and we will use that language instead."
 msgstr ""
+"Som regel vil Crumpet bruge det sprog din enhed bruger, eller Engelsk hvis "
+"dette sprog ikke er tilgængeligt. Hvis du hellere vil bruge et andet sprog"
+" kan du "
+"vælge det her, og bruge det sprog i stedet."
 
 #: qml/SettingsPage.qml:245
 msgctxt ""
