--- a/src/po/cs_CZ/digitail.po
+++ b/src/po/cs_CZ/digitail.po
@@ -1,13 +1,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Kuba <stegoceras@seznam.cz>, 2021.
+# Kuba <stegoceras@seznam.cz>, 2021, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://github.com/MasterTailer/CRUMPET/issues\n"
 "POT-Creation-Date: 2022-03-06 14:07+0000\n"
-"PO-Revision-Date: 2021-08-29 20:03+0200\n"
+"PO-Revision-Date: 2022-03-11 21:34+0100\n"
 "Last-Translator: Kuba <stegoceras@seznam.cz>\n"
 "Language-Team: Czech <kde-i18n-doc@kde.org>\n"
 "Language: cs_CZ\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Lokalize 21.08.0\n"
+"X-Generator: Lokalize 21.12.3\n"
 
 #: BTDeviceEars.cpp:66 BTDeviceMitail.cpp:73 BTDeviceTail.cpp:58
 msgctxt ""
@@ -185,20 +185,20 @@ msgstr ""
 msgctxt ""
 "Title of the message box shown to the user upon a successful firmware upgrade"
 msgid "Upgrade Successful"
-msgstr ""
+msgstr "Update úspěšný"
 
 #: BTDeviceMitail.cpp:165
 msgctxt ""
 "Message shown to the user when a firmware update completed successfully"
 msgid "Congratulations, your gear has been successfully updated to version %1!"
-msgstr ""
+msgstr "Gratuluji, tvoje zařízení bylo úspěšně updatováno na verzi %1!"
 
 #: BTDeviceMitail.cpp:168
 msgctxt ""
 "Title of the message box shown to the user upon an unsuccessful firmware "
 "upgrade"
 msgid "Update Failed"
-msgstr ""
+msgstr "Update selhal"
 
 #: BTDeviceMitail.cpp:168
 msgctxt "Message shown to the user when a firmware update failed"
@@ -208,6 +208,10 @@ msgid ""
 "a safe fallback to just go back to your old firmware version upon a failure. "
 "You can try the update again by clicking the Install button gain.</p>"
 msgstr ""
+"<p>Vypadá to že update selhal. To se nejčastěji stává kvůli špatnému přenosu"
+" během nahrávacího procesu. Tvoje zařízení se bezpečně vrátilo na předchozí"
+" verzi firmwaru. Update můžeš zkusit znovu kliknutím na tlačítko Instalace.<"
+"/p>"
 
 #: BTDeviceMitail.cpp:324
 msgctxt ""
@@ -216,7 +220,7 @@ msgctxt ""
 msgid ""
 "You already have the newest version of the firmware installed on your gear, "
 "congratulations!"
-msgstr ""
+msgstr "Tvoje zařízení má již nainstalovanou nejnovější verzi firmwaru. "
 
 #: BTDeviceMitail.cpp:329
 msgctxt ""
@@ -228,11 +232,14 @@ msgid ""
 "connection issue. If you run into this problem repeatedly, please get in "
 "touch."
 msgstr ""
+"Soubor pro kontrolu informací o firmwaru neobsahuje správný formát dat. Toto"
+" je buď dočasná chyba, nebo chyba připojení. Pokud se tato chyba opakuje,"
+" informuj nás."
 
 #: BTDeviceMitail.cpp:333
 msgctxt "Message for when we are checking the downloaded firmware data"
 msgid "Checking integrity of the downloaded firmware data..."
-msgstr ""
+msgstr "Kontrola integrity stažených dat firmwaru..."
 
 #: BTDeviceMitail.cpp:404
 msgctxt "Warning message when a fault occurred during a connection attempt"
@@ -254,6 +261,10 @@ msgid ""
 "contact us on info@thetailcompany.com and tell us that you got this error.</"
 "p>"
 msgstr ""
+"<p><b>Update selhal!</b></p><p>Pokusili jsme se updatovat firmware moc"
+" rychle, a museli jsme proces přerušit. Pokud vidíš tuto chybu:</p><p>Nemusíš"
+" se bát, tvoje zařízení je v pořádku.</p><p>Následně nás prosím kontaktuj na"
+" info@thetailcompany.com a informuj nás o této chybě.</p>"
 
 #: BTDeviceMitail.cpp:434
 msgctxt ""
@@ -317,6 +328,8 @@ msgid ""
 "Firmware upload complete, waiting for your gear to reboot automatically "
 "before attempting to reconnect..."
 msgstr ""
+"Stažení firmwaru úspěšné, čekáme na automatický reboot tvého zařízení před"
+" pokusem o připojení..."
 
 #: BTDeviceMitail.cpp:566
 msgctxt ""
@@ -333,14 +346,14 @@ msgstr ""
 msgctxt ""
 "Message shown alongside a progress bar when downloading update information"
 msgid "Downloading firmware update information"
-msgstr ""
+msgstr "Stahování informací o firmwarovém updatu"
 
 #: BTDeviceMitail.cpp:693
 msgctxt ""
 "Message shown along a progress bar when downloading the firmware payload "
 "itself"
 msgid "Downloading firmware update from The Tail Company's website..."
-msgstr ""
+msgstr "Stahování firmwarovém updatu z webu The Tail Company..."
 
 #: BTDeviceMitail.cpp:710
 msgctxt ""
@@ -350,6 +363,9 @@ msgid ""
 "should simply try again. If it continues to fail, please get in touch with "
 "us and we can try and work something out!"
 msgstr ""
+"Stažený update firmwaru neobsahuje co by měl. Obvykle se tohle stane kvůli"
+" problému se stahováním. Zkus to znovu, a pokud se situace bude opakovat,"
+" kontaktuj nás a my se pokusíme najít řešení! "
 
 #: BTDeviceMitail.cpp:726
 msgctxt "Message shown during firmware update processes"
@@ -359,6 +375,10 @@ msgid ""
 "Once completed, your gear will restart and disconnect from this device. Once "
 "rebooted, you will be able to connect to it again."
 msgstr ""
+"Nahrávání firmwaru do tvého zařízení. Prosím nech mobil a zařízení blízko u"
+" sebe, a ujisti se že jsou dostatečně nabitá (případně je připoj k"
+" nabíječce). Jakmile update skončí, tvoje zařízení se restartuje a odpojí. Po"
+" restartu bude možné opět připojit."
 
 #: BTDeviceTail.cpp:91
 msgctxt ""
@@ -839,14 +859,14 @@ msgctxt ""
 "Label above the list of options available for disconnecting from a piece of "
 "gear"
 msgid "Please select how you would like to disconnect from %1."
-msgstr ""
+msgstr "Zvol způsob odpojení od %1."
 
 #: qml/DisconnectOptions.qml:68
 msgctxt ""
 "Label above the section that lets you set up the gear for use without a "
 "phone and then disconnect"
 msgid "Use Gear Without Your Phone"
-msgstr ""
+msgstr "Použít Zařízení Bez Mobilu"
 
 #: qml/DisconnectOptions.qml:87
 msgctxt ""
@@ -857,6 +877,9 @@ msgid ""
 "the phone off. This works like a basic Casual Mode, but without the phone to "
 "operate it. (Handy if you're costuming and have nowhere to stow your phone)"
 msgstr ""
+"Zvol tuto možnost pro zapnutí bezmobilního módu, abys mohl nechat mobil"
+" stranou. Tento mód funguje podobně jako Casual mód, ale nepotřebuje mobil k"
+" používání (hodí se pokud cosplayuješ a nemáš kam uložit mobil)"
 
 #: qml/DisconnectOptions.qml:106
 msgctxt ""
@@ -866,20 +889,21 @@ msgid ""
 "No Phone Mode will wait between %1 and %2 seconds before picking its next "
 "move."
 msgstr ""
+"Bezmobilní mód bude čekat mezi %1 a %2 sekundami před výběrem dalšího pohybu."
 
 #: qml/DisconnectOptions.qml:126
 msgctxt ""
 "Label for the slider which lets the user pick how long to wait before No "
 "Phone mode is fully activated"
 msgid "No Phone Mode will wait %1 minute(s) before picking the first move."
-msgstr ""
+msgstr "Bezmobilní mód bude čekat %1 minut(y) před výběrem dalšího pohybu."
 
 #: qml/DisconnectOptions.qml:136
 msgctxt ""
 "Label for the button in the disconnection options popup which puts the gear "
 "into autonomous, or no phone, mode"
 msgid "Engage No Phone Mode"
-msgstr ""
+msgstr "Zapnout bezmobilní mód"
 
 #: qml/DisconnectOptions.qml:170
 #, fuzzy
@@ -896,6 +920,8 @@ msgid ""
 "Pick this option to disconnect from the gear without turning it off (handy "
 "if you want to charge it)."
 msgstr ""
+"Zvol tuto možnost pro odpojení bez vypnutí zařízení (vhodné pokud chceš"
+" zařízení nabít)"
 
 #: qml/DisconnectOptions.qml:191
 #, fuzzy
@@ -910,7 +936,7 @@ msgctxt ""
 "Header label for the section which lets you tell the gear to shut down "
 "before disconnecting"
 msgid "Disconnect and Shut Down"
-msgstr ""
+msgstr "Odpojit a vypnout"
 
 #: qml/DisconnectOptions.qml:230
 msgctxt ""
@@ -919,13 +945,15 @@ msgid ""
 "Pick this option to turn off the gear rather than simply disconnecting "
 "(handy if you're putting it away immediately)"
 msgstr ""
+"Zvol tuto možnost pro vypnutí zařízení místo odpojení (vhodné pokud zařízení"
+" někam uklízíš)"
 
 #: qml/DisconnectOptions.qml:233
 msgctxt ""
 "Label for the button in the disconnection options popup which only "
 "disconnects the gear"
 msgid "Shut Down Gear"
-msgstr ""
+msgstr "Vypnout zařízení"
 
 #: qml/EarPoses.qml:24
 msgctxt "Title for the page for selecting a pose for the EarGear"
@@ -1789,13 +1817,16 @@ msgid ""
 "clicking the \"Check\" button below, and if there is one, you can then click "
 "the button underneath to download and install the update."
 msgstr ""
+"Pokud tvé zařízení podporuje updaty firmwaru, můžeš zkontrolovat jejich"
+" dostupnost stisknutím tlačítka kontroly níže. Pokud najdeme dostupný update,"
+" tlačítkem níže ho budeš moct stáhnout a nainstalovat."
 
 #: qml/SettingsPage.qml:180
 msgctxt ""
 "Label for the button which makes the app go online and check for the newest "
 "firmware available for the specific device"
 msgid "Check For New Firmware"
-msgstr ""
+msgstr "Kontrola dostupnosti firmwaru"
 
 #: qml/SettingsPage.qml:189
 msgctxt ""
@@ -1804,14 +1835,14 @@ msgctxt ""
 msgid ""
 "You currently have version %1 installed, and version %2 is available for you "
 "to install"
-msgstr ""
+msgstr "Momentálně máš nainstalovanou verzi %1, je pro tebe dostupná verze %2"
 
 #: qml/SettingsPage.qml:195
 msgctxt ""
 "Label for the button which makes the app download the newest available "
 "firmware (only visible when updated firmware has been found)"
 msgid "Download"
-msgstr ""
+msgstr "Stáhnout"
 
 #: qml/SettingsPage.qml:203
 msgctxt ""
@@ -1834,6 +1865,19 @@ msgid ""
 "app and reboot. This is quite normal! It should automatically reconnect, but "
 "in case it doesn't, just click the Connect button on the front page as usual."
 msgstr ""
+"Před updatem zařízení z %1 na %2, zajisti předm následující:\n"
+"\n"
+"-Připoj svoje zařízení k USB nabíječce a ujisti se že se nabíjí. Nech"
+" zařízení připojené po dobu updatu firmwaru.\n"
+"\n"
+"-Ujisti se že tvůj mobil má více než 50% baterie před začátkem updatu.\n"
+"\n"
+"Update tvého zařízení zabere přibližně 3 minuty. Po dobu updatu nevypínej"
+" svoje zařízení nebo mobil!\n"
+"\n"
+"Jakmile se update dokončí, zařízení se odpojí a restartuje. Poté by se mělo"
+" znovu samo připojit, ale pokud se tak nestane, budeš ho moct připojit na"
+" hlavní stránce jako obvykle."
 
 #: qml/SettingsPage.qml:209
 msgctxt ""
@@ -1841,12 +1885,12 @@ msgctxt ""
 "firmware (only visible when updated firmware has been downloaded "
 "successfully)"
 msgid "Install"
-msgstr ""
+msgstr "Instalace"
 
 #: qml/SettingsPage.qml:220
 msgctxt "Heading for the panel of the language selector, on the settings page"
 msgid "Language"
-msgstr ""
+msgstr "Jazyk"
 
 #: qml/SettingsPage.qml:221
 msgctxt "Description of the language selection option on the settings page"
@@ -1855,6 +1899,8 @@ msgid ""
 "that language is not available. However, if you wish to force some language, "
 "you can select it here, and we will use that language instead."
 msgstr ""
+"Obvykle Crumpet používá jazyk tvého zařízení, nebo Angličtinu pokud tvůj"
+" jazyk není dostupný. Pokud ovšem chceš zvolit jiný jazyk, zvol ho zde."
 
 #: qml/SettingsPage.qml:245
 msgctxt ""
