--- a/src/po/de_DE/digitail.pot
+++ b/src/po/de_DE/digitail.pot
@@ -10,7 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2023-03-07 15:42+0100\n"
 "Last-Translator: Viktoria Rei Bauer <vbauer@stargazer.at>\n"
 "Language-Team: German\n"
-"Language: en_US\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
